apps/qbittorrent/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: webui
